test/correct/EnumFromTo6.hs
module EnumFromTo6 where

main :: [Int]
main = list
  where
    list :: [Int]
    list = [60..50]
